# CDAS

./: .gitignore  Cargo.toml
.github/workflows/: cargo-build.yml
data/: bible.txt
src/: db.rs  godwords.rs  main.rs
src/routes/: mod.rs  status.rs  wisdom.rs
src/routes/v1/: mod.rs
src/routes/v1/divine/: wisdom.rs
src/utils/: auth.rs
