[package]
name = "cdas"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.215"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
